<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DodajOsobu" >

    <EditText
        android:id="@+id/txtIme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/txtFirstnameHint"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtPrezime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtIme"
        android:ems="10"
        android:hint="@string/txtSurnameHint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtImeRoditelja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPrezime"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtPrezime"
        android:ems="10"
        android:hint="@string/txtParentNameHint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/dateDatumRodjenja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtImeRoditelja"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtImeRoditelja"
        android:ems="10"
        android:hint="@string/txtDateHint"
        android:inputType="date" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/dateDatumRodjenja"
        android:ems="10"
        android:hint="@string/txtEmailHint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtJib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtEmail"
        android:layout_alignRight="@+id/txtEmail"
        android:layout_below="@+id/txtEmail"
        android:ems="10"
        android:hint="@string/txtJibHint" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtJib"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/lblSpol" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rbtnFemale" />
        
        <RadioButton
        	android:id="@+id/radio1"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/rbtnMale" />
        
    </RadioGroup>

    <EditText
        android:id="@+id/txtTelefon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/txtJib"
        android:layout_below="@+id/radioGroup1"
        android:ems="10"
        android:inputType="phone" 
        android:hint="@string/txtPhoneHint" />

    <EditText
        android:id="@+id/txtAdresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/txtTelefon"
        android:layout_below="@+id/txtTelefon"
        android:ems="10"
        android:inputType="textPostalAddress" 
        android:hint="@string/txtAdressHint"/>

    <Spinner
        android:id="@+id/spinnerDrzave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtAdresa"
        android:layout_below="@+id/txtAdresa" />

    <Button
        android:id="@+id/btnAddOsoba"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerDrzave"
        android:onClick="OnClick_btnAddOsoba"
        android:text="Dodaj osobu" />

    <TextView
        android:id="@+id/lblSpol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup1"
        android:layout_alignLeft="@+id/txtTelefon"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="17dp"
        android:text="@string/lblSex"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>