<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DodajAzil" >

    <TextView
        android:id="@+id/lblIme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/txtFirstnameHint"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/btnAddAzil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="OnClick_AddAzil"
        android:text="@string/btnAddAsylum" />

    <TextView
        android:id="@+id/lblAzilFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblIme"
        android:layout_below="@+id/lblIme"
        android:layout_marginTop="15dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lblPrezime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblAzilFirstName"
        android:layout_below="@+id/lblAzilFirstName"
        android:layout_marginTop="30dp"
        android:text="@string/txtSurnameHint"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/lblAzilSecondName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblPrezime"
        android:layout_below="@+id/lblPrezime"
        android:layout_marginTop="15dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lblDatumVize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtAzil"
        android:layout_below="@+id/lblAzilSecondName"
        android:layout_marginTop="30dp"
        android:text="@string/txtDateOfAsylum"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/txtAzil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblAzilSecondName"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lblDatumVize"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/lblTipAzila"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtAzil"
        android:layout_below="@+id/txtAzil"
        android:layout_marginTop="30dp"
        android:text="@string/txtTypeOfAsylum"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spinnerVrstaAzila"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblTipAzila"
        android:layout_marginTop="15dp" />

</RelativeLayout>
